# parallel-programming-examples

./: README.md  badHelloWorld.c  badProducerConsumer.c  goodCounter.c  jacobi.c  mpi.cpp  multiArgumentThreads  multiArgumentThreads.c  symmetricBarrier.c
counter/: badCounter.c
coursework/: ex1Starter  ex1Starter.c  s2768394.c
hello-world/: badHelloWorld.c
jacobi/: jacobi.c
mpi-prime-sieve/: generator.cpp  siever.cpp
mpi/jacobi/: CMakeLists.txt  jacobi.cpp
mpi/mpi-prime-sieve/: CMakeLists.txt
mpi/task-allocation/: mpi.cpp
producer-consumer/: goodProducerConsumer.c
shared-memory/hello-world/: goodHelloWorld.c
shared-memory/prefix-sum/: badMonitor.c
